Align the river status borders correctly

--- a/scss/app.scss
+++ b/scss/app.scss
@@ -195,7 +195,7 @@ div.today {
     h3 {
         font-size: 15px;
         border-bottom: 1px solid #ccc;
-        margin-bottom: 4px;
+        margin-bottom: 0px;
         padding-left: 20px;
         .disclaimer {
             font-size: 14px;
